# Dscraibe-notes-scan

./: .gitignore  README.md  README.md.backup  logger_config.py  pyproject.toml  requirements.txt
src/: add_data2db.py  detection_feuille.py  mistral_ocr.py  run_app.py  run_demo1  run_listening.py  test_full_pipeline.ipynb  tests.ipynb  tests_llm.ipynb
src/audio/: audio_cleaner.py  audio_recorder.py  pause_status.json  pipeline_watcher.py  vad_detector.py  whisper_transcriber.py
src/audio/dictionary/: prompts.py
src/audio/tmp/: transcriptions_log.json
src/backend/: clear_db.py  db.py  find_similar_note.py  get_last_text_for_notes.py  list_notes.py
src/capture/: load_image.py
src/frontend/: app_streamlit.py  log.txt  mistral.py
src/frontend/pages/: app_timeline_cards.py  config.py  nouvelle_page.py
src/image_similarity/: image_comparison.py  orb_and_align.py  resize_minkowski_interpolation.py  test_double_alignment_ORBplusSIFT.py
src/image_similarity/archive/: compare_alignment_SIFTandORB.py  test_double_alignment.py
src/ner/: NER_manual_dataset_generator.py  abrev.py  compare_entities.py  conll2csv.py  entity_linking.py  fine_tunning.py  llm_extraction.py  ner_prompt_template.py  prédiction.py  spacy_model.py
src/ner/archives/: spacy_model.py
src/paper_detection/benchmark/: edges-based-model-generateresults.py  metrics_measure.py  yolo-detect-generateresults.py  yolo-seg-generateresults.py  yolo-seg-moha-generateresults.py
src/paper_detection/edges_based/: config_shape_detector.py  save_detection.py  shape_detector.py  video_capture.py
src/paper_detection/yolo/: blurry_detection.py  segmentation_threshold.py  yolo_tracker_photos.py
src/proc/paper_detection/: batterie_de_test.py  blurry_detection.py  config_shape_detector.py  image_postprocessing.py  image_preprocessing.py  perspective_corrector.py  qr_code.py  save_detection.py  segmentation.py  segmentation_threshold.py  separator_line_detector.py  shape_detector.py  test_image.py  test_resolutions.py  test_video.py  video_capture.py  yolo_detector.py  yolo_tester.py  yolo_tracker.py  yolo_tracker_photos.py  yolo_tracker_with_qr_code.py
src/processing/: add_data2db.py  mistral_ocr_llm.py  teklia_ocr_llm.py
src/raspberry/: capture_video.py  launch_rasp.py  pilote_camera.py  pilote_camera_photo.py  pilote_camera_video.py  run_listening.py
src/recog/: cleaning.py  cleaning_llm.py  image_similarity.py  mistral_llm_correction_texte.py  mistral_ocr_annotation.py  mistral_ocr_llm.py  mistral_ocr_text.py  text_diff.py
src/scripts/: move_recent_photos.sh  sync_raspberry.sh  watcher.sh
src/summary/: note_summarizer.py  prompt.py
src/transcription/: .test.ipynb  app.py  audio_cleaner.py  audio_recorder.py  audio_test.py  audio_watcher.py  config.json  diarisation.py  enregistrement.py  nettoyage_audio.py  text_clean.py  transcribe.py  transcribe_whisper.py  vad.py  vad_detector.py  whisper_transcriber.py
src/utils/: text_utils.py
src/watch/: watch_images.py
src_tom/: run_once.py  tests.ipynb
src_tom/backend/: db.py
src_tom/frontend/: app_streamlit.py
test_nv_htr/: fine-tune-trocr.ipynb
transcription/: test_whisper.ipynb  whisper_transcribe.py
(+26 files in other folders)
