[project]
name = "detection-notes"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ipykernel>=6.30.1",
    "mistralai>=1.9.10",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.1.1",
    "opencv-python>=4.10.0",
    "numpy>=2.2.6",
    "streamlit>=1.50.0",
    "openai-whisper",
    "paramiko>=4.0.0",
    "scp>=0.15.0",
    "openai-whisper",
    "paramiko>=4.0.0",
    "scp>=0.15.0",
    "ultralytics>=8.3.203",
    "lap>=0.5.12",
    "pytubefix>=9.5.1",
    "scikit-image>=0.25.2",
    "watchdog>=6.0.0",
    "transformers>=4.56.2",
    "datasets>=4.1.1",
    "jiwer>=4.0.0",
    "gradio>=5.48.0",
]
