[project]
name = "detection-notes"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    # PyTorch ecosystem - versions compatibles
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "torchcodec==0.7.0",
    
    # Audio processing
    "pyannote-audio==4.0.1",
    "speechbrain==0.5.16",
    "openai-whisper>=20231117",
    "librosa>=0.11.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "noisereduce>=3.0.3",
    
    # ML/AI libraries
    "transformers>=4.56.2",
    "huggingface-hub>=0.35.3",
    "scikit-learn>=1.7.2",
    "scikit-image>=0.25.2",
    "datasets>=4.1.1",
    "seqeval>=1.2.2",
    "jiwer>=4.0.0",
    "spacy>=3.8.7",
    
    # Vision/Detection
    "ultralytics>=8.3.203",
    "opencv-python>=4.10.0",
    "lap>=0.5.12",
    "pyzbar>=0.1.9",
    
    # Web/UI
    "streamlit>=1.50.0",
    "gradio>=5.48.0",
    
    # LLM APIs
    "mistralai>=1.9.10",
    
    # Utilities
    "numpy>=2.2.6",
    "python-dotenv>=1.1.1",
    "paramiko>=4.0.0",
    "scp>=0.15.0",
    "pytubefix>=9.5.1",
    "watchdog>=6.0.0",
    "pot>=0.9.6.post1",
    "markdown2>=2.5.4",
    "ipykernel>=6.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

# Configuration pour les outils de développement
[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100